# ilyasov27.2

hw_27/: db.sqlite3  pyproject.toml
hw_27/ads/: models.py  views.py
hw_27/ads/migrations/: 0001_initial.py
hw_27/data/: converter.py
hw_27/hw_27/: asgi.py  settings.py  urls.py  wsgi.py
