[tool.poetry]
name = "hw-27"
version = "0.1.0"
description = ""
authors = ["xytki <skomorosi@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_27"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
